feat: monaco editor integration (#32)
